--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">چاره</string>
+    <string name="app_name">هایلایت</string>
     <string name="spin_reshte">رشته تحصیلی</string>
     <string name="spin_azmon">آخرین آزمون</string>
 </resources>
